# zonar

./: .gitignore  Makefile.am  README.md  autogen.sh  configure.ac
Docs/preview/: .gitattributes
m4/: dontremove
man/: Makefile.am  zonar.8  zonar_srv.8
src/: Makefile.am  znr.c  znr.h  znr_bg.c  znr_bg.h  znr_device.c  znr_device.h  znr_fs.c  znr_fs.h  znr_gui.c  znr_net.c  znr_net.h  znr_xfs.c  zonar.c  zonar_srv.c
